--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,6 +13,8 @@
     &__btn {
         all: unset;
         cursor: pointer;
+        align-self: start;
+        justify-self: start;
 
         transition: all .2s;
     }
